# meeting_assistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  02_Стек_используемых_технологий.md  03_Этапы_разработки.md  Dockerfile  README.md  RELEASE_MVP_2026-07-21.md  UAT_Telegram_Mini_App.md  alembic.ini  docker-compose.prod.yml  docker-compose.system-caddy.yml  docker-compose.yml  pyproject.toml  Инструкция_для_администратора.html  Инструкция_для_пользователя.html  Инструкция_пользователя_и_администратора.md  Итоговое_ТЗ_Telegram_бот_ассистент_по_встречам.md  Проект_ТЗ_следующий_Telegram_бот_ассистент_по_встречам.md  Проектирование_API_Telegram_Mini_App.md  Промпты_проекта.md  ТЗ_Telegram_Mini_App_ассистент_по_встречам.md
app/: __init__.py  main.py
deploy/: GITHUB_ACTIONS_DEPLOY.md  README.md
frontend/: README.md  index.html  package.json  preview-server.mjs  vite.config.ts
scripts/: check_local_runtime.py  configure_local_postgres_env.py  deploy_production.sh  get_google_refresh_token.py
tests/: test_admin_flow_service.py  test_admin_settings_runtime.py  test_booking_service.py  test_critical_notifications.py  test_diagnostics.py  test_email_notifier.py  test_google_calendar_integration.py  test_google_oauth_api.py  test_healthcheck.py  test_logging_config.py  test_miniapp_admin_api.py  test_miniapp_analytics.py  test_miniapp_analytics_api.py  test_miniapp_auth.py  test_miniapp_auth_route.py  test_miniapp_frontend_static.py  test_miniapp_user_api.py  test_miniapp_user_use_cases.py  test_models.py  test_scheduling_service.py  test_settings.py  (+10 more)
(+106 files in other folders)
